--- a/opmaak.css
+++ b/opmaak.css
@@ -3,8 +3,11 @@ ul{
     margin: 0;
     padding: 0;
     width: 200px;
+    /*background-color: #f1f1f13b;*/
+    color: black;
+    background-color: aqua;
 }
-/*background-color: #f1f1f13b;*/
-c
+
+
 
 
