--- a/opmaak.css
+++ b/opmaak.css
@@ -1,92 +1,114 @@
-ul{
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 200px;
+    width: 100px;
+    /*background-colar: #f1f1f13b;*/
     color: black;
-    background-color:rgb(153, 255, 0);
-}
-/* Stijl voor de menubalk */
-.menubalk {
-    background-color: #f0f0f0; /* Lichtgrijze achtergrondkleur */
-    overflow: hidden;
-}
-
-/* Stijl voor de menu-items */
-.menubalk a {
-    float: left;
-    display: block;
-    color: #333; /* Tekstkleur */
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-/* Stijl voor de menu-items bij hover (wanneer de muis erover beweegt) */
-.menubalk a:hover {
-    background-color: #ddd; /* Achtergrondkleur bij hover */
-}
-
-/* Stijl voor de navigatiebalk */
-.navbar {
-    overflow: hidden;
-    background-color: #333;
-}
-
-/* Stijl voor de links in de navigatiebalk */
-.navbar a {
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-/* Stijl voor de dropdown container */
-.dropdown {
-    float: left;
-    overflow: hidden;
-}
-
-/* Stijl voor de dropdown knop */
-.dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-}
-
-/* Stijl voor de dropdown content */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Stijl voor de links in de dropdown */
-.dropdown-content a {
-    float: none;
+    background-color: rgb(rgb(255, 0, 0), rgb(0, 255, 0), rgb(0, 0, 255));
+  }
+  
+      /* Stijl voor de menubalk */
+  .menubalk {
+    background-color: gray;
     color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+  }
 
-/* Toon de dropdown content bij hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Verander de kleur van de links bij hover */
-.navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: #ddd;
+  /* Stijl voor de menu-items */
+  .menubalk a {
     color: black;
+    text-decoration: none;
+    padding: 10px;
+    transition: background-color 0.3s ease; /* Overgangseffect voor achtergrondkleur */
+  }
+
+  .menubalk a:hover {
+    background-color: darkgray; /* Kleur bij hover */
+    color: black; /* Tekstkleur bij hover */
+  }
+
+  /* Stijl voor het actieve menu-item */
+  .menubalk a.active {
+    font-weight: bold;
+  }
+  
+  .third-level-menu
+  {
+      position: absolute;
+      top: 0;
+      right: -150px;
+      width: 150px;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: none;
+  }
+  
+  .third-level-menu > li
+  {
+      height: 30px;
+      background: #999999;
+  }
+  .third-level-menu > li:hover { background: #CCCCCC; }
+  
+  .second-level-menu
+  {
+      position: absolute;
+      top: 30px;
+      left: 0;
+      width: 150px;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: none;
+  }
+  
+  .second-level-menu > li
+  {
+      position: relative;
+      height: 30px;
+      background: #999999;
+  }
+  .second-level-menu > li:hover { background: #CCCCCC; }
+  
+  .top-level-menu
+  {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+  }
+  
+  .top-level-menu > li
+  {
+      position: relative;
+      float: left;
+      height: 30px;
+      width: 150px;
+      background: #999999;
+  }
+  .top-level-menu > li:hover { background: #CCCCCC; }
+  
+  .top-level-menu li:hover > ul
+  {
+      /* On hover, display the next level's menu */
+      display: inline;
+  }
+  
+  
+  /* Menu Link Styles */
+  
+  .top-level-menu a /* Apply to all links inside the multi-level menu */
+  {
+      font: bold 14px Arial, Helvetica, sans-serif;
+      color: #FFFFFF;
+      text-decoration: none;
+      padding: 0 0 0 10px;
+  
+      /* Make the link cover the entire list item-container */
+      display: block;
+      line-height: 30px;
+  }
+  .top-level-menu a:hover { color: #000000; }
